--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,10 @@
           <span class="header__ticket-container-right">&#10095;</span>
         </div>
       </div>
-      <img  src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
-          class="header__photo"
-          alt="muzej Ukrayini Kiyiv"
-      >
+      <div class="header__photo"></div>
     </header>
     <main class="main">
-      <h2>Актуальні події</h2>
+      <h2 class="main__title">Актуальні події</h2>
       <div class="main__container-galery">
         <img
           src="images/Rectangle 2.2.png"
@@ -51,24 +48,23 @@
       </div>
       <div class="main__container-galery-reverse">
         <img
-          src="images/Rectangle 4.2.png"
-          alt="photo"
-          class="main__galery-image"
-        >
+        src="images/Rectangle 4.2.png"
+        alt="photo"
+        class="main__galery-image-reverse"
+      >
         <div class="main__galery-text">
           <div class="main__galery-text-header">
             <h5>ВИСТАВКА</h5>
             <h5>26.08-29.11.2019</h5>
           </div>
-          <h3 class="main__galery-text-title">
-            Йду і повертаюсь
+          <h3 class="main__galery-text-title-reverse">
+            І спогади і мрії
           </h3>
           <p class="main__galery-text-desc">
-            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
           </p>
         </div>
       </div>
-      <div class="main__container-photo"></div>
     </main>
     <div class="main__photo-center-container">
       <img
@@ -76,6 +72,15 @@
         alt="photo"
         class="main__photo-center"
       >
+      <div class="main__photo-info">
+        <div class="main__photo-header-container">
+          <h4 class="main__photo-center-subtitle-1">ЛЕКЦІЯ </h4>
+          <h4 class="main__photo-center-subtitle-2">26/08/2019 - 11:00 </h4>
+        </div>
+        <div class="main__photo-subtitle-container">
+          Від класицизму до романтизму
+        </div>
+      </div>
     </div>
     <main class="main-footer">
       <div class="main-footer__galery">
@@ -125,6 +130,72 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <!-- 1 -->
+      <!-- <div class="footer__left-container">
+        <span>NAMU</span>
+        <div>
+          <img
+            src="images/Group.png"
+            alt="link facebook"
+            class="footer__link-photo-facebook"
+          >
+          <img
+            src="images/instagram (3).png"
+            alt="link instagram"
+            class="footer__link-photo-instagram"
+          >
+        </div>
+      </div> -->
+      <!-- 2 -->
+      <div class="footer__center-container">
+        <div class="footer__center-left-block">
+          <div class="footer__center-left-title">Графік роботи</div>
+          <div class="footer__center-left-text">
+            <strong>12:00 — 20:00</strong>середа<br>
+            <strong>12:00 — 20:00</strong> четвер <br>
+            <strong>12:00 — 20:00</strong> п’ятниця <br>
+            <strong>11:00 — 19:00</strong> субота <br>
+            <strong>11:00 — 19:00</strong> неділя <br>
+          </div>
+          <div class="footer__center-middle-text">
+            <p>
+              Вихідні понеділок, <br> вівторок <br> Каса припиняє роботу <br> за 1 годину
+              <br> до закриття музею.
+            </p>
+          </div>
+        </div>
+        <div class="footer__center-right-block">
+          <div class="footer__center-right-title">Контакти:</div>
+          <div class="footer__center-right-text">
+            вул. М. Грушевського, 6; <br>
+            Київ, 01001 <br>
+            тел. +38 (044) 278-13-57 <br>
+            факс +38 (044) 278-74-54 <br>
+            e-mail: info@namu.kiev.ua
+          </div>
+        </div>
+      </div>
+
+      <div class="footer__line"></div>
+
+      <!-- 3 -->
+      <div class="footer__right-container">
+        <div class="footer__galery">
+          <div class="footer__galery-text">Галерея</div><br>
+          <div class="footer__galery-text">Виставки та події</div> <br>
+          <div class="footer__galery-text">Відвідування</div> <br>
+          <div class="footer__galery-text">Стати нашим другом</div> <br>
+        </div>
+        <div class="footer__about-us">
+          <div class="footer__galery-text">Про Нас</div><br>
+          <div class="footer__galery-text">Магазин</div> <br>
+          <div class="footer__galery-text">Блог</div> <br>
+          <div class="footer__galery-text">Контакти</div> <br>
+
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
