--- a/src/index.html
+++ b/src/index.html
@@ -60,18 +60,20 @@
               src="../src/images/Rectangle.jpg"
               alt="page"
             >
-            <div class="card__date">
-              <span>ВИСТАВКА</span>
-              <a target="blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MW5hZnBiM2hhaGhzb2RkOXZncmlxMHBuYWUgdGVtYXF3ZXJ0eTE1QG0&amp;tmsrc=temaqwerty15%40gmail.com">
-                15.03-29.06.2027
-              </a>
-            </div>
-            <div class="card__text">
-              <h3 class="card__title">
-                Йду і повертаюсь
-              </h3>
-              <div class="card__content">
-                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини <br> 1980-1995 років.
+            <div class="card__contents">
+              <div class="card__date">
+                <span>ВИСТАВКА</span>
+                <a target="blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MW5hZnBiM2hhaGhzb2RkOXZncmlxMHBuYWUgdGVtYXF3ZXJ0eTE1QG0&amp;tmsrc=temaqwerty15%40gmail.com">
+                  15.03-29.06.2027
+                </a>
+              </div>
+              <div class="card__text">
+                <h3 class="card__title">
+                  Йду і повертаюсь
+                </h3>
+                <div class="card__content">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини <br> 1980-1995 років.
+                </div>
               </div>
             </div>
           </div>
@@ -81,18 +83,20 @@
               src="../src/images/Rectangle1.png"
               alt="page"
             >
-            <div class="card__date">
-              <span>ВИСТАВКА</span>
-              <a target="blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MW5hZnBiM2hhaGhzb2RkOXZncmlxMHBuYWUgdGVtYXF3ZXJ0eTE1QG0&amp;tmsrc=temaqwerty15%40gmail.com">
-                15.03-29.06.2027
-              </a>
-            </div>
-            <div class="card__text">
-              <h3 class="card__title">
-                І спогади і мрії
-              </h3>
-              <div class="card__content">
-                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            <div class="card__contents card__contents--2">
+              <div class="card__date">
+                <span>ВИСТАВКА</span>
+                <a target="blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MW5hZnBiM2hhaGhzb2RkOXZncmlxMHBuYWUgdGVtYXF3ZXJ0eTE1QG0&amp;tmsrc=temaqwerty15%40gmail.com">
+                  15.03-29.06.2027
+                </a>
+              </div>
+              <div class="card__text">
+                <h3 class="card__title">
+                  І спогади і мрії
+                </h3>
+                <div class="card__content">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </div>
               </div>
             </div>
           </div>
