--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,23 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="shortcut icon"
+      href="./images/favicon.jpg"
+      type="image/jpeg"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
-      crossorigin="">
+      crossorigin=""
+    >
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <script type="text/javascript" src="scripts/main.js"></script>
@@ -22,6 +29,7 @@
 
       <nav class="menu" id="menu">
         <div class="container menu__container">
+          <a href="#" class="menu__icon-close"></a>
           <ul class="menu__list">
             <li class="logo menu__logo">
               <a href="#">
@@ -30,14 +38,14 @@
                 MU
               </a>
             </li>
-            <li class="menu__link"><a href="#">Галерея</a></li>
-            <li class="menu__link"><a href="#"> Виставки та події</a></li>
+            <li class="menu__link"><a href="#gallery">Галерея</a></li>
+            <li class="menu__link"><a href="#events"> Виставки та події</a></li>
             <li class="menu__link"><a href="#">Відвідування</a></li>
             <li class="menu__link"><a href="#">Стати нашим другом</a></li>
             <li class="menu__link"><a href="#">Про Нас</a></li>
             <li class="menu__link"><a href="#">Магазин</a></li>
             <li class="menu__link"><a href="#">Блог</a></li>
-            <li class="menu__link"><a href="#">Контакти</a></li>
+            <li class="menu__link"><a href="#contact">Контакти</a></li>
           </ul>
           <form
             action=""
@@ -54,8 +62,7 @@
       </nav>
 
       <!-- nav -->
-      <nav class="nav nav--open container">
-        <!-- <a href="#menu" class="nav__icon nav__icon--close"></a> -->
+      <nav class="nav container">
         <a href="#menu" class="nav__icon nav__icon--open"></a>
 
         <a href="#" class="logo nav__logo">
@@ -90,7 +97,7 @@
       </header>
 
       <!-- actual -->
-      <section class="actual page__section">
+      <section class="actual page__section" id="events">
         <div class="container">
           <h2 class="page__subtitle">
             Актуальні події
@@ -100,7 +107,7 @@
             <div class="grid grid--except-mobile">
               <img
                 src="./images/actual1.png"
-                alt=""
+                alt="sea landscape oil painting"
                 class="event-card__photo grid__item grid__item--tablet--1-6 grid__item--desktop--1-7 grid__item--large--1-9">
               <div
                 class="event-card__info grid__item grid__item--tablet--1-3 grid__item--desktop--9-12 grid__item--large--11-14">
@@ -113,7 +120,9 @@
                   </span>
                 </div>
                 <h3 class="event-card__name">
-                  Йду і повертаюсь
+                  <a href="" class="event-card__link">
+                    Йду і повертаюсь
+                  </a>
                 </h3>
                 <p class="event-card__text">
                   Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
@@ -127,7 +136,7 @@
             <div class="grid grid--except-mobile">
               <img
                 src="./images/actual2.png"
-                alt=""
+                alt="Tetiana Yablonska oil painting"
                 class="event-card__photo grid__item grid__item--tablet--1-6 grid__item--desktop--6-12 grid__item--large--8-16 grid__item--order_2">
               <div
                 class="event-card__info grid__item grid__item--tablet--1-3 grid__item--desktop--1-4 grid__item--large--3-6">
@@ -140,7 +149,9 @@
                   </span>
                 </div>
                 <h3 class="event-card__name">
-                  І спогади і мрії
+                  <a href="" class="event-card__link">
+                    І спогади і мрії
+                  </a>
                 </h3>
                 <p class="event-card__text">
                   Національний художній музей України до 100 річчя від дня народження видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
@@ -164,7 +175,9 @@
               </span>
             </div>
             <h3 class="lection-card__name">
-              Від&nbspкласицизму до&nbspромантизму
+              <a href="" class="lection-card__link">
+                Від&nbspкласицизму до&nbspромантизму
+              </a>
             </h3>
 
           </div>
@@ -172,7 +185,7 @@
       </section>
 
       <!-- gallery -->
-      <section class="gallery page__section">
+      <section class="gallery page__section" id="gallery">
         <div class="container">
           <h2 class="page__subtitle">
             Галерея
@@ -187,22 +200,22 @@
             <div class="gallery__images">
               <img
                 src="./images/gallery1.png"
-                alt=""
+                alt="woman in traditional Ukraining dress"
                 class="gallery__image"
               >
               <img
                 src="./images/gallery2.png"
-                alt=""
+                alt="winter landscape in the contryside"
                 class="gallery__image"
               >
               <img
                 src="./images/gallery3.png"
-                alt=""
+                alt="impressionism painting by Kiriak Kosandi"
                 class="gallery__image"
               >
               <img
               src="./images/gallery4.png"
-              alt=""
+              alt="impressionism painting leisure"
               class="gallery__image"
             >
             </div>
@@ -219,31 +232,31 @@
             <div class="grid grid--desktop-only">
               <img
                 src="./images/gallery1.png"
-                alt=""
+                alt="woman in traditional Ukraining dress"
                 class="grid__item grid__item--1-4 gallery__img-desktop">
               <img
                 src="./images/gallery2.png"
-                alt=""
+                alt="winter landscape in the contryside"
                 class="grid__item grid__item--5-12 gallery__img-desktop"
               >
               <img
                 src="./images/gallery3.png"
-                alt=""
+                alt="impressionism painting by Kiriak Kosandi"
                 class="grid__item grid__item--large--13-16 gallery__img-desktop"
               >
               <img
                 src="./images/gallery4.png"
-                alt=""
+                alt="impressionism painting leisure"
                 class="grid__item grid__item--1-8 gallery__img-desktop"
               >
               <img
                 src="./images/gallery5.png"
-                alt=""
+                alt="sea landscape, expresionism"
                 class="grid__item grid__item--9-12 gallery__img-desktop"
               >
               <img
                 src="./images/gallery6.png"
-                alt=""
+                alt="Cossacks"
                 class="grid__item grid__item--large--13-16 gallery__img-desktop"
               >
             </div>
@@ -262,14 +275,24 @@
             <p class="subscribe__text">
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
-            <div class="subscribe__input-field">
+            <form
+              action=""
+              method="POST"
+              class="subscribe__input-field"
+            >
               <input
                 class="subscribe__input"
                 type="email"
                 name="email"
-                placeholder="E-mail">
-              <button type="submit" class="button-arrow button-arrow--orange"></button>
-            </div>
+                placeholder="E-mail"
+                required
+              >
+              <button
+                type="submit"
+                class="button-arrow button-arrow--orange"
+              >
+              </button>
+            </form>
           </div>
         </div>
       </section>
@@ -286,8 +309,20 @@
           </p>
 
           <div class="footer__icons">
-            <a href="" class="footer__media-link"><img src="./images/Facebook.png" alt="facebook icon"></a>
-            <a href="" class="footer__media-link"><img src="./images/instagram (3).png" alt="instagram icon"></a>
+            <a href="" class="footer__media-link">
+              <img
+                class="footer__media-icon"
+                src="./images/Facebook.png"
+                alt="facebook icon"
+              >
+            </a>
+            <a href="" class="footer__media-link">
+              <img
+                class="footer__media-icon"
+                src="./images/instagram (3).png"
+                alt="instagram icon"
+              >
+            </a>
           </div>
         </div>
         <section class="footer__working-hours grid__item grid__item--tablet--2-3 grid__item--desktop--3-4">
@@ -307,13 +342,29 @@
           </p>
         </section>
 
-        <p class="footer__details grid__item grid__item--tablet--4-5 grid__item--desktop--5-6 grid__item--large--6-7">
+        <p id="contact" class="footer__details grid__item grid__item--tablet--4-5 grid__item--desktop--5-6 grid__item--large--6-7">
           Контакти:
           <br> <br>
-          вул. М. Грушевського, 6; Київ, 01001
-          тел. +38 (044) 278-13-57
-          факс +38 (044) 278-74-54
-          e-mail: info@namu.kiev.ua
+          <a
+            href="https://goo.gl/maps/sx4ar4DCjozzLzi97"
+            target="_blank"
+            rel="noopener"
+            class="footer__contact-link"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <br>
+          <a href="tel:+38 (044) 278-13-57" class="footer__contact-link">
+            тел. +38(044)278-13-57
+          </a>
+          <br>
+          <a href="fax:+38 (044) 278-74-54" class="footer__contact-link">
+            факс +38(044)278-74-54
+          </a>
+          <br>
+          <a href="mailto: e-mail: info@namu.kiev.ua" class="footer__contact-link">
+            e-mail: info@namu.kiev.ua
+          </a>
         </p>
 
         <a href="#" class="button-mobl-up grid__item grid__item--mobile--2-2 grid__item--just-self_right"></a>
