--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="./images/favicon-32x32.png"
+    >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
       rel="preconnect"
@@ -107,8 +112,14 @@
       >
     </section>
 
-    <section class="=subscription">
+    <section class="subscription">
       <div class="subscription__block">
+        <h2 class="subscription__name">
+          Підписка
+        </h2>
+        <p class="subscription__content">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
         <div class="button button--email">
           <div class="button__tickets button__tickets--email">
             E-mail
@@ -124,6 +135,121 @@
       </div>
     </section>
 
+    <footer class="footer">
+      <div class="footer__logo">
+        <a href="#" class="logo">
+          <span class="logo__txt logo__txt--footer">
+            na
+            <br>
+            mu
+          </span>
+        </a>
+        <div class="footer__soc-links">
+          <img src="./images/facebk.svg" alt="">
+          <img src="./images/instagram (3).svg" alt="">
+        </div>
+      </div>
+
+      <div class="footer__contacts contacts">
+        <p>Графік роботи</p>
+        <p>Контакти:</p>
+        <p>
+          <span class="footer__bold">12:00 — 20:00</span>
+          <br>
+        середа
+          <br>
+          <span class="footer__bold">12:00 — 20:00</span>
+          <br>
+          четвер
+          <br>
+          <span class="footer__bold">12:00 — 20:00</span>
+          <br>
+          п’ятниця
+          <br>
+          <span class="footer__bold">11:00 — 19:00</span>
+          <br>
+          субота
+          <br>
+          <span class="footer__bold">11:00 — 19:00</span>
+          <br>
+          неділя
+          <br>
+          <br>
+          Вихідні понеділок, вівторок
+          <br>
+          Каса припиняє роботу за 1 годину до закриття музею
+        </p>
+        <p>вул. М. Грушевського, 6; Київ, 01001
+          <br>
+          тел. +38 (044)
+          <br>
+          278-13-57
+          <br>
+          факс +38 (044)
+          <br>
+          278-74-54
+          <br>
+          e-mail:
+          <br>
+          info@namu.kiev.ua
+        </p>
+      </div>
+      <div class="footer__container">
+        <button class="footer__button">
+          <img src="./images/Arrow up.svg" alt="">
+        </button>
+      </div>
+
+      <div class="footer__line"></div>
+
+      <div class="footer__contacts">
+        <ul class="footer__nav-items">
+          <li class="footer__nav-item">
+            <a href="#gallery" class="footer__nav-link">
+              Галерея
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#events" class="footer__nav-link">
+              Виставка та події
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#lecture" class="footer__nav-link">
+              Відвідування
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#subscribe" class="footer__nav-link">
+              Стати нашим другом
+            </a>
+          </li>
+        </ul>
+
+        <ul class="footer__nav-items footer__nav-items--right">
+          <li class="footer__nav-item">
+            <a href="#subscribe" class="footer__nav-link">
+              Про нас
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#shop" class="footer__nav-link">
+              Магазин
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#subscribe" class="footer__nav-link">
+              Блог
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#contacts" class="footer__nav-link">
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
