--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,359 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel=icon href=images/favicon.png>
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header container">
+      <a href="#nav-menu" class="header__menu-icon icon icon--menu "></a>
+      <a href="/Museum/#" class="logo">
+        NA
+        <br>
+        MU
+      </a>
+    </header>
+    <div class="navigation-menu" id="nav-menu">
+      <div class="navigation-menu__content-wrapper container">
+        <a href="/Museum/#" class="logo">
+          NA
+          <br>
+          MU
+        </a>
+        <ul class="navigation-menu__list">
+          <li class="navigation-menu__list-item">
+            <a href="#gallery" class="navigation-menu__list-item-link">
+              Галерея
+            </a>
+          </li>
+          <li class="navigation-menu__list-item">
+            <a href="#current-events" class="navigation-menu__list-item-link">
+              Виставки та події
+            </a>
+          </li>
+          <li class="navigation-menu__list-item">
+            <a href="#lecture" class="navigation-menu__list-item-link">
+              Відвідування
+            </a>
+          </li>
+          <li class="navigation-menu__list-item">
+            <a href="#subscribe" class="navigation-menu__list-item-link">
+              Стати нашим другом
+            </a>
+          </li>
+          <li class="navigation-menu__list-item">
+            <a href="#" class="navigation-menu__list-item-link">
+              Про Нас
+            </a>
+          </li>
+          <li class="navigation-menu__list-item">
+            <a href="#" class="navigation-menu__list-item-link">
+              Магазин
+            </a>
+          </li>
+          <li class="navigation-menu__list-item">
+            <a href="#" class="navigation-menu__list-item-link">
+              Блог
+            </a>
+          </li>
+          <li class="navigation-menu__list-item">
+            <a href="#contacts" class="navigation-menu__list-item-link">
+              Контакти
+            </a>
+          </li>
+        </ul>
+        <a href="#" class="navigation-menu__search icon icon--search "></a>
+      </div>
+
+    </div>
+    <section class="art-museum">
+      <picture class="art-museum__photo-wrapper">
+        <source media="(min-width: 1920px)" srcset="images/museum-photo-1245w655.png">
+        <source media="(min-width: 1440px)" srcset="images/museum-photo-805w655.png">
+        <source media="(min-width: 1280px)" srcset="images/museum-photo-725w655.png">
+        <source media="(min-width: 768px)" srcset="images/museum-photo-505w384.png">
+        <source media="(min-width: 320px)" srcset="images/museum-photo-320w300.png">
+        <img
+          src="images/museum-photo-320w300.png"
+          alt="museum photo"
+          class="art-museum__photo">
+      </picture>
+      <div class="art-museum__content-group">
+        <h1 class="art-museum__title container">
+          ХУДОЖ<span class="art-museum__title-border-text">НІЙ
+            </span>
+          МУЗЕЙ
+        </h1>
+        <a href="#" class="buy-ticket">
+          <button class="buy-ticket__button">
+            Квитки
+          </button>
+          <span class="buy-ticket__button-icon"></span>
+        </a>
+      </div>
+      <div class="art-museum__event-absolute">Події</div>
+    </section>
+    <section class="current-events container">
+      <h2 class="current-events__title" id="current-events">
+        Актуальні події
+      </h2>
+      <ul class="current-events__list">
+        <li class="event-card grid">
+          <picture class="grid__mob--1-2 grid__tabl--1-6 grid__desk--1-7 grid__hd-res--1-9">
+            <source media="(min-width: 1920px)" srcset="images/event-1-card-photo-870w520.png">
+            <source media="(min-width: 1280px)" srcset="images/event-1-card-photo-670w520.png">
+            <source media="(min-width: 768px)" srcset="images/event-1-card-photo-700w520.png">
+            <source media="(min-width: 320px)" srcset="images/event-1-card-photo-280w210.png">
+            <img
+              class="event-card__image"
+                 src="images/event-1-card-photo-280w210.png"
+                 alt="Landscape picture"
+            >
+          </picture>
+          <div class="event-card__info-wrapper grid__tabl--1-6 grid__mob--1-2 grid__desk--9-12 grid__hd-res--11-14">
+            <div class="event-card__event-time-wrapper">
+              <p class="event-card__event-title"
+              >ВИСТАВКА
+              </p>
+              <p class="event-card__event-data">26.08-29.11.2019</p>
+            </div>
+            <h3 class="event-card__title">
+              Йду і повертаюсь
+            </h3>
+            <p class="event-card__text">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво
+              другої половини 1980-1995 років.
+            </p>
+          </div>
+        </li>
+        <li class="event-card grid">
+          <picture class="grid__mob--1-2 grid__tabl--1-6 grid__desk--6-12 grid__hd-res--8-16 event-card__image-wrapper">
+            <source media="(min-width: 1920px)" srcset="images/event-2-card-photo-870w520.png">
+            <source media="(min-width: 1280px)" srcset="images/event-2-card-photo-670w520.png">
+            <source media="(min-width: 768px)" srcset="images/event-2-card-photo-700w520.png">
+            <source media="(min-width: 320px)" srcset="images/event-2-card-photo-280w210.png">
+            <img
+              class="event-card__image"
+              src="images/event-2-card-photo-280w210.png"
+              alt="Woman and bird"
+            >
+          </picture>
+          <div class="event-card__info-wrapper grid__mob--1-2 grid__tabl--1-6 grid__desk--1-4 grid__hd-res--3-6">
+            <div class="event-card__event-time-wrapper">
+              <p class="event-card__event-title">
+                ВИСТАВКА
+              </p>
+              <p class="event-card__event-data">
+                26.08-29.11.2019
+              </p>
+            </div>
+            <h3 class="event-card__title">
+              І спогади і мрії
+            </h3>
+            <p class="event-card__text">
+              Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни
+              Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </p>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section class="lecture" id="lecture">
+      <div class="lecture__background"></div>
+      <a href="#" class="lecture__content-wrapper">
+        <div class="lecture__time-info-wrapper">
+          <p class="lecture__date-title">
+            ЛЕКЦІЯ
+          </p>
+          <p class="lecture__date">
+            26/08/2019 - 11:00
+          </p>
+        </div>
+        <p class="lecture__title">
+          Від класицизму до романтизму
+        </p>
+      </a>
+    </section>
+    <section class="gallery"  id="gallery">
+      <h2 class="gallery__title container">
+        Галерея
+      </h2>
+      <div class="gallery__list ">
+        <img
+          srcset="images/gallery-image-1-370w600.png"
+          alt="Woman photo"
+          class="gallery__list-photo"
+        >
+        <img
+          srcset="images/gallery-image-2-370w600.png"
+          alt="Ducks walks"
+          class="gallery__list-photo"
+        >
+        <img
+          srcset="images/gallery-image-3-770w360.png"
+          alt="old villige in snow"
+          class="gallery__list-photo">
+        <img
+          srcset="images/gallery-image-4-770w360.png"
+          alt="women on bench in park"
+          class="gallery__list-photo">
+        <img
+          srcset="images/gallery-image-5-370w360.png"
+          alt="sea picture" class="gallery__list-photo"
+        >
+        <img
+          srcset="images/gallery-image-6-320w270.png"
+          alt="Cossacs on meeting"
+          class="gallery__list-photo"
+        >
+      </div>
+      <div class="gallery__selectors-container">
+        <div class="gallery__selector-item"></div>
+        <div class="gallery__selector-item"></div>
+        <div class="gallery__selector-item"></div>
+        <div class="gallery__selector-item"></div>
+      </div>
+    </section>
+    <section class="subscribe" id="subscribe">
+      <div class="subscribe__content-wrapper">
+        <div class="subscribe__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </div>
+        <form action="" class="subscribe__form">
+          <input
+            type="email"
+            class="subscribe__email"
+            placeholder="E-mail"
+            name="email"
+            required
+          >
+          <button
+            type="submit"
+            class="subscribe__submit-button"
+          ></button>
+        </form>
+      </div>
+    </section>
+    <footer class="footer container grid">
+      <div class="footer__icon-wrapper grid__mob--1-2 grid__tabl--1-1">
+        <a href="/Museum/#" class="logo  " >
+          NA
+          <br>
+          MU
+        </a>
+        <div class="footer__insta-facebook-icon-container">
+          <a href="https://www.instagram.com/" target="_blank" rel="noopener" class="icon icon--facebook"></a>
+          <a href="https://www.facebook.com/" target="_blank" rel="noopener" class="icon icon--instagram"></a>
+        </div>
+      </div>
+      <div class="footer__schedule-contact-wrapper  grid__mob--1-2 grid__tabl--2-5 grid__desk--3-7">
+        <div class="footer__schedule">
+          <div class="footer__schedule-title">
+            Графік роботи
+          </div>
+          <div class="footer__schedule__item">
+            <p class="footer__schedule-time">
+              12:00-20:00
+            </p>
+            <p class="footer__schedule-day">
+              середа
+            </p>
+          </div>
+          <div class="footer__schedule__item">
+            <p class="footer__schedule-time">
+              12:00-20:00
+            </p>
+            <p class="footer__schedule-day">
+              четвер
+            </p>
+          </div>
+          <div class="footer__schedule__item">
+            <p class="footer__schedule-time">
+              12:00-20:00
+            </p>
+            <p class="footer__schedule-day">
+              п'ятниця
+            </p>
+          </div>
+          <div class="footer__schedule__item">
+            <p class="footer__schedule-time">
+              11:00-19:00
+            </p>
+            <p class="footer__schedule-day">
+              субота
+            </p>
+          </div>
+          <div class="footer__schedule__item">
+            <p class="footer__schedule-time">
+              11:00-19:00
+            </p>
+            <p class="footer__schedule-day">
+              неділя
+            </p>
+          </div>
+          <br>
+          <p class="schedule__note">
+            Вихідні понеділок,
+            <br>
+            вівторок
+            <br>
+            Каса припиняє роботу
+            <br>
+            за 1 годину
+            <br>
+            до закриття музею
+          </p>
+        </div>
+        <div class="footer__contacts" id="contacts">
+          <p class="footer__contacts-title">Контакти:</p>
+          <p class="footer__contacts-text">
+            вул. М. Грушевського, 6;
+            <br class="line-separator">
+            Київ, 01001
+            <br>
+            тел. +38 (044) 278-13-57
+            <br>
+            факс +38 (044) 278-74-54
+            <br>
+            e-mail: info@namu.kiev.ua
+          </p>
+        </div>
+        </div>
+      <div class="footer__separator-line grid__mob--1-2 grid__tabl--2-5"></div>
+      <a href="/Museum/#" class="footer__arrow-icon">
+
+      </a>
+      <div class="footer__menu grid__mob--1-2 grid__tabl--2-5 grid__desk--8-11 grid__hd-res--9-13">
+        <a href="#gallery" class="footer__menu-item">
+          Галерея
+        </a>
+        <a href="" class="footer__menu-item">
+          Про Нас
+        </a>
+        <a href="#current-events" class="footer__menu-item">
+          Виставки та події
+        </a>
+        <a href="" class="footer__menu-item">
+          Магазин
+        </a>
+        <a href="#lecture" class="footer__menu-item">
+          Відвідування
+        </a>
+        <a href="" class="footer__menu-item">
+          Блог
+      </a>
+        <a href="#subscribe" class="footer__menu-item">
+          Стати нашим другом
+        </a>
+        <a href="#contacts" class="footer__menu-item">
+          Контакти
+        </a>
+      </div>
+    </footer>
+    <script type="text/javascript" src="scripts/main.js">
+    </script>
   </body>
 </html>
+
+
